# agentcore-identity-full-demo

./: .gitignore  AUTH0-SETUP.md  PUBLISH-KEYCLOAK-JWKS.md  README.md  clean.sh
agent-sts/: README.md  config.yaml
agentgateway/: config-agentcore.yaml  config-extauth.yaml  config-keycloak.yaml  config-nosecure.yaml  config-opa.yaml  config.yaml  export-aws-sso-creds.sh  run-agw.sh  run-jaeger.sh
backend/: Dockerfile  Makefile  README.md  TRACING_README.md  __main__.py  env.example  env.kube  pyproject.toml  quick_test_tracing.py  run_server.py
backend/app/: __init__.py  __main__.py  config.py  main.py  models.py  tracing_config.py
backend/app/api/: agents.py  auth.py  optimization.py
backend/app/services/: a2a_service.py  agent_service.py  agent_sts_service.py  auth0_service.py  auth_service.py  keycloak_service.py  optimization_service.py  tracing_interceptor.py
backend/manifests/: deployment.yaml
keycloak/: README.md  config.json  keycloak-openid.json  openid-configuration.json
market-analysis-agent/: .bedrock_agentcore.yaml  AGENTCORE.md  Dockerfile  Makefile  README.md  TRACING.md  __main__.py  agent_card.json  agent_executor.py  agent_sts_service.py  business_policies.py  env.example  env.kube  invoke_a2a.py  main.py  mcp_client.py  pyproject.toml  requirements.txt  test_client.py  tracing_config.py
market-analysis-agent/.bedrock_agentcore/a2a_market_analysis_agent/: dependencies.hash
market-analysis-agent/manifests/: deployment.yaml
opa-policy-engine/: README.md  run-opa.sh  test-policies.sh
opa-policy-engine/policies/: authz.rego
supply-chain-agent/: .bedrock_agentcore.yaml  AGENTCORE.md  Dockerfile  Makefile  README.md  TRACING.md  __main__.py  agent_card.json  agent_executor.py  agent_sts_service.py  business_policies.py  debug_test.py  env.example  env.kube  invoke_a2a.py  main.py  pyproject.toml  requirements.txt  test_client.py  tracing_config.py
supply-chain-agent/.bedrock_agentcore/a2a_supply_chain_agent/: dependencies.hash
supply-chain-agent/manifests/: deployment.yaml
supply-chain-ui/: env.example  env.template  package.json
supply-chain-ui/public/: index.html
supply-chain-ui/src/: App.css  App.js  api.js  auth0-config.js  index.js  keycloak.js
supply-chain-ui/src/components/: AuthTokensDialog.js  Login.js  MarkdownRenderer.js  MarkdownTest.js  TokenDisplay.js  UserDropdown.js
supply-chain-ui/src/hooks/: useAuth0.js  useKeycloak.js  useOptimization.js
supply-chain-ui/src/utils/: markdownUtils.js
